fix footer icon alignment and navbar focus bug

--- a/web/src/components/Footer/Footer.scss
+++ b/web/src/components/Footer/Footer.scss
@@ -14,8 +14,8 @@
   }
 
   svg {
-    font-size: 1.5em;
-    margin-right: 6px;
-    vertical-align: -0.125em;
+    font-size: 1.7em;
+    margin-right: 10px;
+    vertical-align: -0.25em;
   }
 }
