--- a/web/src/components/Navbar/Navbar.scss
+++ b/web/src/components/Navbar/Navbar.scss
@@ -26,8 +26,12 @@
         box-shadow: inset 0 -2px 0 0 $brand-primary;
         font-weight: bold;
 
+        &:focus,
         &:hover {
           background: none;
+        }
+
+        &:hover {
           color: $brand-primary;
         }
       }
